feat: show the game count of the currently library in the bottom left
In the left side of the footer you can now see the number of games in
all platforms of the currently selected library, if one is selected.

--- a/static/window/styles/styles.css
+++ b/static/window/styles/styles.css
@@ -665,7 +665,14 @@ body {
 }
 /* Game Count */
 .footer__game-count {
+  font-size: 0.9rem;
   cursor: default;
+}
+.footer__game-count p {
+  display: inline-block;
+}
+.footer__game-count p:not(:last-child) {
+  padding-right: 0.3rem;
 }
 /* Scale New-Game */
 .footer__new-game {
