tweak: gray out the "Already Installed" text of upgrades

--- a/static/window/styles/styles.css
+++ b/static/window/styles/styles.css
@@ -823,6 +823,9 @@ body {
   text-align: center;
   white-space: pre-line;
 }
+.home-page__box--upgrades .home-page__grayed-out {
+  color: var(--theme__text-disabled-color);
+}
 /* Random Games */
 .home-page__random-games {
   text-align: center;
