fix: make adding game images more stable
Adding images with the "Add Screenshot" and "Add Thumbnail" buttons now
create the image folders if they are missing and load them to the cache.
The buttons are now disabled if the current image folder name is empty
(this occurs for new games without a platform set).
Saving game images will now use the games ID in the filename (instead of
using the title).
Attempting to cache missing image folders now logs a warning in the
console instead of letting it throw and error.

--- a/static/window/styles/styles.css
+++ b/static/window/styles/styles.css
@@ -1268,6 +1268,9 @@ body {
 .game-image-split--hover {
   background-color: #575757;
 }
+.game-image-split--disabled {
+  background-color: #141414;
+}
 .game-image-split:first-child {
   border-right: 1px var(--inner-border-color) dashed;
   margin-bottom: -1px;
