--- a/static/window/styles/styles.css
+++ b/static/window/styles/styles.css
@@ -339,6 +339,21 @@ body {
 .log__source--redirector {
   color: #00ffff;
 }
+/* Simple Columns */
+.simple-columns {
+  /*--columns: <Number of columns>;*/
+  /*--column-width: <Width of each column>;*/
+  /*--column-gutter: <Margin on the left and right side of each column>;*/
+  max-width: calc(var(--columns) * var(--column-width) + var(--column-gutter) * min(0, var(--columns) - 1));
+  text-align: center;
+}
+.simple-columns__column {
+  display: inline-block;
+  width: var(--column-width);
+  margin: 0 calc(var(--column-gutter) * 0.5);
+  vertical-align: top;
+  text-align: initial;
+}
 
 
 /* ------ Search & SearchTag Components ------ */
@@ -865,6 +880,9 @@ body {
 
 /* ------ About ------ */
 .about-page {
+  --columns: 2;
+  --column-width: 35em;
+  --column-gutter: 2em;
   width: 100%;
   height: 100%;
   overflow: auto;
@@ -872,9 +890,8 @@ body {
 .about-page__inner {
   display: flex;
   flex-direction: column;
-  width: 35em;
+  min-width: var(--column-width);
   height: 100%;
-  margin: 0 auto;
 }
 .about-page__top {
   flex: 1 0 auto;
@@ -898,11 +915,19 @@ body {
 }
 .about-page__title {
   font-size: 2.5em;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.5rem;
   text-align: center;
 }
+.about-page__columns {
+  margin: auto;
+}
+.about-page__columns__left {
+  margin-top: 2rem;
+}
+.about-page__columns__right {
+}
 .about-page__section {
-  margin-bottom: 2rem
+  margin-bottom: 2rem;
 }
 .about-page__section__title {
   font-size: 1.4rem;
@@ -924,10 +949,10 @@ body {
 }
 /* Credits */
 .about-page__credits {
-  margin-bottom: 2rem;
 }
 .about-page__credits__title {
-  font-size: 1.5rem;
+  font-size: 1.6rem;
+  margin-bottom: 0.25rem;
 }
 .about-page__credits__profiles {}
 .about-page__credits__profile {
@@ -935,6 +960,7 @@ body {
   width: var(--size);
   height: var(--size);
   margin: 0.25rem;
+  margin-top: 0;
   clip-path: circle();
   display: inline-block;
   overflow: hidden;
