fix: titles of game grid items now breaks long words into multiple lines

--- a/static/window/styles/styles.css
+++ b/static/window/styles/styles.css
@@ -1549,6 +1549,7 @@ body {
   text-overflow: ellipsis;
   font-size: calc((16 / 188) * var(--height) * 1px);
   line-height: 1.2;
+  word-break: break-word;
   /* Pimp */
   font-weight: bold;
   user-select: none;
