refactor: correct spelling in a css variable name and comments (& more)
Correct the spelling of the CSS variable "--layout__tertiary-backround".
Rename "--layout__confirm-bright-color".
Correct the spelling and format in various comments.
Change spacing of the CSS variable declarations (so the values line up).

--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -1331,7 +1331,7 @@ body {
 }
 /* Playlist-List-Item Content */
 .playlist-list-item__content {
-  max-height: 0; /* Overriden with JavaScript when expanded */
+  max-height: 0; /* Overridden with JavaScript when expanded. */
   overflow: hidden;
   transition: max-height 0.2s ease-in-out;
 }
