docs: fix spelling in the top comment of the css files

--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -3,7 +3,7 @@
  * Contains all styles that are necessary for the application to be used.
  * This includes styles that set things like position, size, "user-select" etc.
  * 
- * The application should be completely usable with this stylesheet only.
+ * The application should be completely usable with this style-sheet only.
  * 
  */
 
