--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -3,7 +3,7 @@
  * Contains all styles that enhance the visuals of the application.
  * This includes things like text/background/border colors, fonts etc.
  *
- * This stylesheet should be compleley optional.
+ * This style-sheet should be completely optional.
  * 
  */
 
