refactor: move the "last" colors to css variables (& some more stuffs)
The "last" (some values were ignored) color values have been moved to
css variables.
Some css variables have been renamed.
Some css rules have been slightly changed (the outcome should be the
same, but they are easier to override for themes).

--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -1564,6 +1564,7 @@ body {
 .setting__row__content--input-field > :first-child {
   width: 100%;
 }
-.setting__row__content--input-field > :first-child > * {
+.setting__row__content--input-field .input-dropdown__input-field,
+.setting__row__content--input-field .input-dropdown__content {
   border: 1px solid;
 }
