--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -239,6 +239,7 @@ body {
   position: absolute;
   overflow-x: hidden;
   overflow-y: auto;
+  z-index: 1; /* Kind of a hacky fix - makes the drop-down selection not appear underneath the drop-downs that come after this */
   /* Pimp */
   border: 1px solid;
 }
@@ -792,6 +793,13 @@ body {
 .curate-page__top > * {
   margin-right: 0.25rem;
 }
+/* (Edit how other classes appear in this page) */
+.curate-page .input-dropdown__content {
+  max-height: 25rem;
+}
+.curate-page .input-field--multiline.input-field--edit {
+  height: 5em;
+}
 /* Curate Box */
 .curate-box {
   margin: 1.5rem 0;
@@ -844,6 +852,18 @@ body {
   margin-bottom: 0.2rem;
 }
 .curate-box-files__head {
+  user-select: none;
+}
+.curate-box-files__body {}
+.curate-box-files__entry {}
+/* Curate Box Warnings */
+.curate-box-warnings {
+  margin-bottom: 0.2rem;
+}
+.curate-box-warnings--empty {
+  display: none;
+}
+.curate-box-warnings__head {
   user-select: none;
 }
 .curate-box-files__body {}
@@ -1011,7 +1031,6 @@ body {
 }
 .browse-right-sidebar__row--one-line .input-dropdown__content {
   max-height: 25rem;
-  z-index: 1; /* Kind of a hacky fix - makes the drop-down secntion not appear underneath the drop-downs that come after this */
 }
 .browse-right-sidebar__row--additional-applications-header > :not(:first-child) {
   float: right;
