feat: support curating add-apps, use ObjectParser for curations & more
Additional Application meta data in curation meta is now extracted,
displayed in the curation importer and saved when imported.
ObjectParser is used to convert the "raw" curation meta data into a more
programmer friendly format (instead of the previous basic function).
Divider elements have been added to the CurateBox component to make it
easier to see where each "section" begins and ends.
You can no longer preview an CurateBoxImage that does not have an image
(the cursor does not change to "zoom-in" when hovering over one of
these).

--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -835,6 +835,11 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
+/* Curate Box Divider */
+.curate-box-divider {
+  margin: 0.4rem 0;
+  border-width: 1px;
+}
 /* Curate Box Row */
 .curate-box-row {
   display: flex;
@@ -847,6 +852,11 @@ body {
 .curate-box-row__content {
   flex: 1 1;
 }
+/* Curate Box Add-App */
+.curate-box-add-app {
+  margin: 0.5rem 0;
+  padding: 0.4rem;
+}
 /* Curate Box Files */
 .curate-box-files {
   margin-bottom: 0.2rem;
@@ -854,8 +864,6 @@ body {
 .curate-box-files__head {
   user-select: none;
 }
-.curate-box-files__body {}
-.curate-box-files__entry {}
 /* Curate Box Warnings */
 .curate-box-warnings {
   margin-bottom: 0.2rem;
@@ -866,8 +874,6 @@ body {
 .curate-box-warnings__head {
   user-select: none;
 }
-.curate-box-files__body {}
-.curate-box-files__entry {}
 /* Curate Box Buttons */
 .curate-box-buttons {
   text-align: right;
