--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -429,6 +429,15 @@ body {
   background-color: var(--layout__tertiary-background);
   border-color: var(--layout__primary-outline-color);
 }
+/* Curate Box Divider */
+.curate-box-divider {
+  border-color: var(--layout__primary-outline-color);
+  border-style: solid;
+}
+/* Curate Box Add-Apps */
+.curate-box-add-app:nth-child(2n) {
+  background-color: var(--layout__quaternary-background);
+}
 /* Curate Box Files */
 .curate-box-files__head-collision-count {
   color: var(--layout__curate-entry-collision-color);
@@ -439,6 +448,9 @@ body {
 /* Curate Box Images */
 .curate-box-images__image {
   cursor: zoom-in;
+}
+.curate-box-images__image--placeholder {
+  cursor: default;
 }
 
 
