feat: the "Remove" button in CurateBox now has to be clicked twice
The "Remove" button has been wrapped in a ConfirmElement which makes it
require two clicks (without moving the cursor away from the button) to
remove it.

--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -458,6 +458,10 @@ body {
 .curate-box-images__image--placeholder {
   cursor: default;
 }
+/* Curate Box Buttons */
+.curate-box-buttons__button--active:hover { /* ":hover" to get higher specificity */
+  background-color: var(--layout__warning-medium-color);
+}
 
 
 /* ------ Log ------ */
