feat: rework GameList to display the games in a more compact way
The "List" mode of the browse page has been reworked to make it look
more like a "compact list" or "advanced list".
The game list items are now only one "row" tall and divided into
columns.
Each game list item now only show the following fields/properties:
Platform (as an icon), Title, Genre, Developer and Publisher.

--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -583,6 +583,11 @@ body {
 .game-list-item__thumb {
   image-rendering: var(--layout__game-item-thumb-image-rendering);
 }
+/* GameList Header */
+.game-list-header-column__divider,
+.game-list-header__scroll-fill {
+  background: var(--layout__browse-sidebar-divider-background);
+}
 
 
 /* GameGrid */
