fix: make the list not poke under the footer
The list is now the correct size and does not poke under the footer.

--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -1205,8 +1205,10 @@ body {
 
 /* GameList Wrapper */
 .game-list-wrapper {
-  display: contents;
   /* --height | Height of list items (in pixels) */
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 /* GameList */
 .game-list {}
