--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -697,6 +697,16 @@ body {
   border-color: var(--layout__developer-page-log-border);
 }
 
+.service-box {
+  background-color: var(--layout__quaternary-background);
+  border-color: var(--layout__tertiary-background);
+  box-shadow: 0px 2px 4px 0px #09090a;
+  padding: 0.5em;
+}
+
+.service-box__log {
+  background-color: var(--layout__primary-background);
+}
 
 /** ------ Config ------ */
 /* Setting */
