--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -57,6 +57,7 @@
   /* Right Browse Sidebar */
   --layout__browse-right-sidebar-screenshot-placeholder-background: #1b1b1b;
   --layout__browse-right-sidebar-screenshot-placeholder-border:     #818181;
+  --layout__browse-right-sidebar-field-hover:                       #857df3;
   /* Playlist List */
   --layout__playlist-list-item-even-background:                #1e1e1f;
   --layout__playlist-list-fake-even-background:                #19191b;
@@ -191,6 +192,9 @@ body {
 /* Input Field */
 .input-field--warn {
   background-color: var(--layout__warning-medium-color);
+}
+.input-field--selectable:hover {
+  color: var(--layout__browse-right-sidebar-field-hover);
 }
 /* Checkbox Dropdown */
 .simple-dropdown {
