--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -182,6 +182,7 @@ body {
   border: 1px solid;
 }
 .simple-dropdown__content {
+  z-index: 10;
   width: var(--width);
   display: block;
   position: absolute;
