--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -101,6 +101,8 @@
   /* Header Menu Item */
   --layout__header-menu-item-hover-background: #3c2d4b;
   --layout__header-menu-item-hover-border: #d33682;
+  /* Splash Screen */
+  --layout__splash-screen_loading:                 #eb4b4b;
   /* Misc */
   --layout__title-bar-cross-color:                 #eb4b4b;
   --layout__no-theme-suggestion-color:             #bfbfbf;
@@ -743,6 +745,18 @@ body {
 /* Splash Screen */
 .splash-screen {
   background: var(--layout__primary-background);
+}
+.splash-screen_loading_logo {
+  /* Mask the background color with the FP logo */
+  -webkit-mask: url('../images/logo-solid.svg');
+  -webkit-mask-size: var(--size);
+  -webkit-mask-repeat: no-repeat;
+  /* Cool colors yall */
+  background:
+    linear-gradient(rgba(0, 0, 0, 0), var(--layout__primary-background)),
+    linear-gradient(90deg, #ff2400, #e81d1d, #ff2400);
+  background-size: var(--zoom) 100%;
+  -webkit-animation: home-page__logo__slide 60s linear infinite;
 }
 .splash-screen_status {
   color: var(--layout__primary-text-color);
